--- a/examples/merge_signals_with_crsp.Rmd
+++ b/examples/merge_signals_with_crsp.Rmd
@@ -12,15 +12,19 @@ library(lubridate)
 # devtools::install_github("tomz23/OpenSourceAP.DownloadR")
 library(OpenSourceAP.DownloadR)
 
-# connect to WRDS 
+# define WRDS credentials (use .Renviron or manually enter here)
+wrds_user <- Sys.getenv("WRDS_USER", unset = "your_wrds_username_here")
+wrds_pass <- Sys.getenv("WRDS_PASS", unset = "your_wrds_password_here")
+
+# connect to WRDS
 connect <- dbConnect(
-        RPostgres::Postgres(),
-        host = 'wrds-pgdata.wharton.upenn.edu',
-        port = 9737,
-        dbname = 'wrds',
-        sslmode = 'require',
-        user = Sys.getenv("WRDS_USER"),  # alternatively manually enter WRDS credentials here
-        pass = Sys.getenv("WRDS_PASS")   # alternatively manually enter WRDS credentials here
+  RPostgres::Postgres(),
+  host = 'wrds-pgdata.wharton.upenn.edu',
+  port = 9737,
+  dbname = 'wrds',
+  sslmode = 'require',
+  user = wrds_user,  
+  pass = wrds_pass
 )
 
 # initialize OpenAP
@@ -96,13 +100,17 @@ signalname <- "BM"  # Select signal
 
 # Process signal data and assign stocks to portfolios
 temp <- crsp_signals %>%
+  filter(!is.na(!!sym(signalname))) %>%  # Drop NA before calculating quantiles
   select(permno, date, ret, all_of(signalname)) %>%
   group_by(date) %>%
-  mutate(port = cut(!!sym(signalname), 
-                    breaks = quantile(!!sym(signalname), probs = seq(0, 1, length.out = n + 1), na.rm = TRUE), 
-                    labels = 1:n, 
-                    include.lowest = TRUE)) %>%
+  mutate(port = cut(
+    !!sym(signalname), 
+    breaks = quantile(!!sym(signalname), probs = seq(0, 1, length.out = n + 1), na.rm = TRUE), 
+    labels = 1:n, 
+    include.lowest = TRUE
+  )) %>%
   ungroup()
+
 
 # Calculate number of stocks and mean return by date and portfolio
 port <- temp %>%
@@ -140,6 +148,7 @@ signalname <- "AssetGrowth"  # Select signal
 
 # Process signal data and assign stocks to portfolios
 temp <- crsp_signals %>%
+  filter(!is.na(!!sym(signalname))) %>%  # Remove NA values before quantile calculation
   select(permno, date, ret, all_of(signalname)) %>%
   group_by(date) %>%
   mutate(port = cut(!!sym(signalname), 
@@ -171,8 +180,6 @@ port_summary <- port %>%
 
 # Display the result
 print(port_summary)
-
-
 ```
 
 The return spread of 74 bps per month for long-short quintiles is once again similar to the anomalies. As usual, the short leg is super critical. Nearly all of the returns are found by shorting portfolio 5---at least during the 1980s and in these tiny stocks.
@@ -204,11 +211,11 @@ signals_signed <- openap$dl_signal(signal_list, signed = FALSE)
 ```{r}
 # compare signed and unsigned signals
 filtered_signals <- signals %>%
-                      filter(permno == 10001) %>%
-                      distinct(across(all_of(signal_list)), .keep_all = TRUE)
+  filter(permno == 10001) %>%
+  distinct(across(all_of(signal_list)), .keep_all = TRUE)
 
 signals_comparison <- filtered_signals %>%
-                      inner_join(signals_signed, by = c("permno", "yyyymm"))
+  inner_join(signals_signed, by = c("permno", "yyyymm"))
 
 head(signals_comparison)
 ```
