remove missing values when computing average of t

--- a/examples/merge_portfolios_with_ff_factors.Rmd
+++ b/examples/merge_portfolios_with_ff_factors.Rmd
@@ -151,7 +151,7 @@ portsum_mean <- portsum %>%
   group_by(port) %>%
   summarise(
     meanret = mean(meanret),
-    tstat = mean(tstat),
+    tstat = mean(tstat, na.rm = TRUE),
     nmonth = mean(nmonth),
     datemin = mean(datemin),
     datemax = mean(datemax),
