Update exapmle signing logic to TRUE

--- a/examples/merge_signals_with_crsp.Rmd
+++ b/examples/merge_signals_with_crsp.Rmd
@@ -205,7 +205,7 @@ One can alternatively download signals such that high signals mean high future r
 
 ```{r}
 # download signed signals
-signals_signed <- openap$dl_signal(signal_list, signed = FALSE)
+signals_signed <- openap$dl_signal(signal_list, signed = TRUE)
 ```
 
 ```{r}
